portfolio.css
/* General grid */
.grid-main{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto auto;
    gap: calc(var(--space-largest) * 2);
    max-width: 50%;
    margin-inline: auto;
    margin-bottom: calc(var(--space-largest) * 2);
}

.grid-main__a{
    display: grid;
    gap: var(--space-small);
    text-align: center;
    margin-inline: auto;
}

.grid-main__a p{
    line-height: calc(var(--txt-lh) / 1.5);
    margin-bottom: var(--space-small);
}

.grid-main__pagination{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, auto);
    gap: var(--space-small);
}

.grid-main__pagination ul{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(2, 22vh);
    gap: var(--space-small);
    list-style: none;
}

#search{
    display: grid;
    gap: var(--space-smallest);
    grid-auto-flow: column;
    align-items: center;
    margin-inline: auto;
}
#search-bar{
    max-width: 100% !important;
    height: var(--space-large);
    color: var(--clr-darkest);
    background-color: var(--clr-lightest);
    border: solid 3px var(--clr-darkest);
    border-radius: var(--space-smallest);
    padding: var(--space-smallest);

    font-family: "peridot-pe-variable", sans-serif;
    font-variation-settings: "wght" 400, "wdth" 100, "slnt" 0;
    font-size: var(--txt-h5);
}
#search-bar:focus{
    border: solid 3px var(--clr-darkest);
    border-color: var(--clr-darkest);
}
#search-submit{
    height: 100%;
    cursor: pointer;
}

.v-card{
    display: grid;
    text-align: center;
    transition: transform 300ms ease;
}
.v-card .v-card__img{
    width: 100%;
    aspect-ratio: 16 / 9;
    border-radius: var(--space-smallest);
    position: relative;
    overflow: hidden;
    margin-bottom: var(--space-smallest);
}

.v-card .v-card__img img{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-height: 100%;
}

.v-card h2{
    font-family: "acumin-variable", sans-serif;
    font-variation-settings: "wght" 400, "wdth" 100, "ital" 0;
    font-size: calc(var(--txt-h5) / 1.25);
    line-height: calc(var(--txt-lh) / 1.5);
}
.v-card h3{
    font-family: "acumin-variable", sans-serif;
    font-variation-settings: "wght" 200, "wdth" 100, "ital" 0;
    font-size: calc(var(--txt-h6) / 1.25);
    line-height: calc(var(--txt-lh) / 1.5);
}

.v-card:hover{
    transform: scale(1.05);
}

.grid-main__pagination ul li.hidden{
    display: none;
}

.pagination-container{
    display: flex;
    align-items: center;
    bottom: 0;
    justify-content: center;
}
.pagination-number,
.pagination-button{
    font-family: "acumin-variable", sans-serif;
    font-variation-settings: "wght" 400, "wdth" 100, "ital" 0;
    font-size: var(--txt-h5);
    color: var(--clr-darkest);
    background-color: var(--clr-lightest);
    border: none;
    cursor: pointer;
    height: var(--space-largest);
    width: var(--space-largest);
}

.pagination-number.active{
    color: var(--clr-lightest);
    background-color: var(--clr-darkest);
}

.pagination-number:hover,
.pagination-button:not(.disabled):hover{
    color: var(--clr-lightest);
    background: var(--clr-darkest);
}

#svg-search-glass{
    width: 2rem;
    transition: transform 500ms ease;
}
#svg-search-glass path,
#svg-search-glass circle{
    fill: var(--clr-darkest);
}

#svg-search-glass.searching{
    transform: rotateZ(45deg);
}
#svg-search-glass.searching.found{
    transform: rotateZ(405deg) scale(1.2);
}

/* Tablet landscape */
@media only screen and (min-width: 1051px) and (max-width: 1366px) and (orientation: landscape){ /* between 1051px and 1366px */
    
    .grid-main{
        max-width: 60%;
    }
    .grid-main__pagination ul{
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(4, auto);
        gap: var(--space-largest) !important;
    }

}

@media only screen and (max-width: 1050px){
    .grid-main{
        max-width: 80%;
        padding-top: calc(var(--space-largest) * 2);
    }
    .grid-main__pagination ul{
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(8, auto);
        row-gap: var(--space-largest) !important;
    }
    .v-card h2{
        font-size: calc(var(--txt-h5) / 1.4);
        line-height: calc(var(--txt-lh) / 1.75);
    }
    .v-card h3{
        font-size: calc(var(--txt-h6) / 1.4);
        line-height: calc(var(--txt-lh) / 1.75);
    }
    .v-card .v-card__img{
        width: 80%;
        margin-inline: auto;
    }
    #search{
        place-items: center;
        min-width: 100% !important;
    }
    #search-bar{
        min-width: 100% !important;
    }
    #svg-search-glass{
        width: 1.5rem;
    }
    #search-submit{
        height: 100%;
        cursor: pointer;
        padding-inline: calc(var(--space-small) / 2);
        padding-block: calc(var(--space-small) / 4);
    }
    .pagination-number,
    .pagination-button{
        height: calc(var(--space-largest) * 1.25);
        width: calc(var(--space-largest) * 1.25);
    }

    @media only screen and (orientation: landscape){
        .grid-main{
            max-width: 60%;
        }
        .grid-main__pagination ul{
            column-gap: calc(var(--space-smallest) / 2) !important;
        }
        #search-bar{
            min-width: auto !important;
            max-width: auto !important;
            width: 100% !important;
        }
    }
}

@supports not (aspect-ratio: 16 / 9) { /* Fallback for aspect-ratio */
    .v-card .v-card__img::before {
        float: left;
        padding-top: 56.25%;
        content: "";
    }
    .v-card .v-card__img::after {
        display: block;
        content: "";
        clear: both;
    }
}

